deployments/aggregate/namespace-aggregate.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ndhai-aggregate
  labels:
    name: ndhai-aggregate
