deployments/aggregate/network.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-ingress
  namespace: ndhai-greeting
spec:
  podSelector: {}
  ingress:
    - {}
  policyTypes:
    - Ingress
